Add new blog post about learning AI Code Editors

--- a/src/index.njk
+++ b/src/index.njk
@@ -5,8 +5,8 @@ title: Home
 
 <section class="hero">
     <div class="hero-content">
-        <h1>Welcome to My Personal Website</h1>
-        <p class="hero-text">Hi, I'm [Your Name]. I'm a software developer passionate about creating elegant solutions to complex problems.</p>
+        <h1>Welcome to Kumar's Personal Website</h1>
+        <p class="hero-text">Hi, I'm Kumar. I'm a passionate developer who loves to explore and create innovative solutions in the world of technology.</p>
         <div class="hero-buttons">
             <a href="/about" class="button primary">Learn More</a>
             <a href="/contact" class="button secondary">Get in Touch</a>
