Fix search functionality: Properly serialize search index and ensure correct script loading order

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="/css/prism-theme.css">
     
     {# Scripts #}
-    <script src="https://cdn.jsdelivr.net/npm/elasticlunr@0.9.5/elasticlunr.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/elasticlunr@0.9.5/elasticlunr.min.js"></script>
     <script src="/js/search.js" defer></script>
     <script src="/js/theme.js" defer></script>
 </head>
@@ -31,6 +31,7 @@
             <a href="/">Home</a>
             <a href="/blog">Blog</a>
             <a href="/projects">Projects</a>
+            <a href="/products">Products</a>
             <a href="/tags">Tags</a>
             
             {# Dark mode toggle #}
