Add Analytics link to home page

--- a/src/index.njk
+++ b/src/index.njk
@@ -10,6 +10,7 @@ title: Home
         <div class="hero-buttons">
             <a href="/about" class="button primary">Learn More</a>
             <a href="/contact" class="button secondary">Get in Touch</a>
+            <a href="/analytics" class="button secondary">Analytics</a>
         </div>
     </div>
 </section>
