--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -3,19 +3,18 @@
 {% block content %}
 <article class="post">
     <header class="post-header">
-        <h1>{{ title }}</h1>
+        <h1 class="post-title">{{ title }}</h1>
         <div class="post-meta">
             <time datetime="{{ page.date | dateIso }}">{{ page.date | dateReadable }}</time>
-            • {{ content | readingTime }} min read
+            {% if tags %}
+            <div class="post-tags">
+                {% for tag in tags %}
+                <a href="/tags/{{ tag }}" class="tag">{{ tag }}</a>
+                {% endfor %}
+            </div>
+            {% endif %}
+            <div class="reading-time">{{ content | readingTime }} min read</div>
         </div>
-        
-        {% if tags %}
-        <div class="tags">
-            {% for tag in tags %}
-                <a href="/tags#{{ tag }}" class="tag">#{{ tag }}</a>
-            {% endfor %}
-        </div>
-        {% endif %}
     </header>
 
     {% if toc %}
@@ -59,7 +58,37 @@
         </div>
     </footer>
     {% endif %}
+
+    <footer class="post-footer">
+        <div class="post-share">
+            <h3>Share this post</h3>
+            <div class="share-buttons">
+                <a href="https://twitter.com/intent/tweet?text={{ title | urlencode }}&url={{ page.url | urlencode }}" target="_blank" rel="noopener noreferrer">Twitter</a>
+                <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ page.url | urlencode }}&title={{ title | urlencode }}" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+            </div>
+        </div>
+    </footer>
 </article>
+
+<script type="application/ld+json">
+{
+    "@context": "https://schema.org",
+    "@type": "BlogPosting",
+    "headline": "{{ title }}",
+    "datePublished": "{{ page.date | dateIso }}",
+    "dateModified": "{{ page.date | dateIso }}",
+    "author": {
+        "@type": "Person",
+        "name": "{{ site.author.name }}"
+    },
+    "description": "{{ description }}",
+    "url": "{{ page.url | absoluteUrl }}",
+    "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "{{ page.url | absoluteUrl }}"
+    }
+}
+</script>
 
 <style>
     .post {
