--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -40,8 +40,7 @@
             <div class="nav-links">
                 <a href="/">Home</a>
                 <a href="/blog">Blog</a>
-                <a href="/projects">Projects</a>
-                <a href="/products">Products</a>
+
                 <a href="/tags">Tags</a>
                 
                 {# Dark mode toggle #}
@@ -59,7 +58,9 @@
     </header>
 
     <main>
-        {{ content | safe }}
+        {% block content %}
+            {{ content | safe }}
+        {% endblock %}
     </main>
 
     <footer>
